--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "language-mediawiki",
-  "version": "0.1.1",
-  "description": "Converted From the Textmate Bundle",
+  "version": "1.0.0",
+  "description": "Originally converted From the Textmate Bundle",
   "repository": "https://github.com/cjwilburn/atom-language-mediawiki",
   "license": "MIT",
   "engines": {
